CLOUD FORMATION TEMPLATE/fox-sg-template.yml
Resources:
  PublicWebServerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable HTTP and SSH ingress
      VpcId: !ImportValue network1-VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 72.83.17.230/32
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 192.168.0.0/16
          ####### Wordpress update SG
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          SourceSecurityGroupId: "sg-0623932e26ac6c3a6"
            # - !Ref PublicWebServerSecurityGroup

        # - IpProtocol: tcp
        #   FromPort: '22'
        #   ToPort: '22'
        #   CidrIp: !Ref SSHLocation
      Tags:
      - Key: Name
        Value: !Sub ${AWS::StackName}-Public-sg

      

  PrivateWebServerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable HTTP and SSH ingress
      VpcId: !ImportValue network1-VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 72.83.17.230/32
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 192.168.0.0/16
      Tags:
      - Key: Name
        Value: !Sub ${AWS::StackName}-Private-sg


Outputs:
  PublicWebServerSecurityGroup:
    Description: The security group ID to use for public web servers
    Value: !GetAtt 
      - PublicWebServerSecurityGroup
      - GroupId
    Export:
      Name: !Sub '${AWS::StackName}-publicSecurityGroupID'

  PrivateWebServerSecurityGroup:
    Description: The security group ID to use for public web servers
    Value: !GetAtt 
      - PrivateWebServerSecurityGroup
      - GroupId
    Export:
      Name: !Sub '${AWS::StackName}-privateSecurityGroupID'
